ac-by-aygul-18 Add text block "Our mission" below the map added

--- a/src/static/index_new.html
+++ b/src/static/index_new.html
@@ -212,6 +212,23 @@
     <!-- Wrap the rest of the page in another container to center all the content. -->
 
     <input id="searchByLocation" value="" ng-model="locationToSearch" ng-change="searchByLocation" type="text" style="display: none"/>
+
+    <section id="section-2" class="container">
+		<center>
+			<div class="title" style="font-weight: bold;">Our mission: Making culture affordable</div>
+			<div class="container_27 clearfix">
+				<div class="grid_21 prefix_3 suffix_3">
+					<div class="subheading" style="margin-top:15px">
+						There's a whole wide world out there, full of wonderful things to do and amazing places
+                        to explore. Yet visiting museum, gallery or zoo can be too expensive for many people to afford.
+                        We're on a mission to put the world's most memorable yet absolutely free cultural experiences
+                        at your fingertips. Because culture should be open and free for everyone.
+					</div>
+				</div>
+			</div>
+		</center>
+	</section>
+
     <div class="container marketing">
 
 	<div class="profile-list-area"></div>
