ac-by-aygul-18 Add text block "Our mission" below the map

--- a/src/static/index_new.html
+++ b/src/static/index_new.html
@@ -215,7 +215,7 @@
 
     <section id="section-2" class="container">
 		<center>
-			<div class="title" style="font-weight: bold;">Our mission: Making culture affordable</div>
+			<h2 class="title" style="font-weight: bold;">Our mission: Making culture affordable</h2>
 			<div class="container_27 clearfix">
 				<div class="grid_21 prefix_3 suffix_3">
 					<div class="subheading" style="margin-top:15px">
