--- a/src/static/index_new.html
+++ b/src/static/index_new.html
@@ -66,9 +66,9 @@
 <li>
      <form class="navbar-form navbar-right" role="search">
       <div class="form-group">
-        <input id="search" type="text" class="form-control" ng-model="keywords" placeholder="Type in country or city" style="width: 357px;">
+        <input id="search" type="text" class="form-control" ng-model="keywords" placeholder="Type in country or city name" style="width: 357px;">
       </div>
-      <button type="submit" class="btn btn-default" id="countryButton" ng-click="search()">Go!</button>
+      <button type="submit" class="btn btn-default" id="countryButton" ng-click="search()">Search</button>
     </form>
 
 </li>
@@ -103,7 +103,7 @@
                 <span id="myGsignin"></span>
             </div>
         </li>
-        <li ng-show="userProfile"><a href="#">My Wishlist</a></li>
+        <li ng-show="userProfile"><a href="#" ng-click="">My Wishlist</a></li>
         <li class="dropdown" ng-show="userProfile">
         <a href="#" class="dropdown-toggle" data-toggle="dropdown" style="padding: 9px;"><img ng-src="{{userProfile.googlePublicProfilePhotoUrl|profilePicture:32}}"/> <b class="caret"></b></a>
         <ul class="dropdown-menu">
