--- a/src/static/index_new.html
+++ b/src/static/index_new.html
@@ -75,35 +75,12 @@
 </ul>
 
     <ul class="nav navbar-nav navbar-right">
-      <li>
-
-      </li>
-        <li>
-
-           <!-- div id="profileInfo" class="navbar-form pull-right">
-                <span id="signin" ng-show="immediateFailed">
-                  <span id="myGsignin"></span>
-                </span>
-
-                <span id="userProfile" ng-show="userProfile">
-                 <button class="button danger disconnect btn btn-default" ng-click="disconnect()" style="">
-                     Disconnect
-                 </button>
-                 <a target="_blank" href="{{userProfile.googlePublicProfileUrl}}" title="{{userProfile}}">
-                         <span class="name">{{userProfile.googleDisplayName}}</span>
-                         <img ng-src="{{userProfile.googlePublicProfilePhotoUrl|profilePicture:32}}"/>
-                 </a>
-                </span>
-          </div -->
-
-
-      </li>
         <li class="dropdown" ng-show="immediateFailed">
             <div id="signin">
                 <span id="myGsignin"></span>
             </div>
         </li>
-        <li ng-show="userProfile"><a href="#" ng-click="">My Wishlist</a></li>
+        <li ng-show="userProfile"><a href="#" ng-click="getAttractionsByWantToGo()">My Wishlist</a></li>
         <li class="dropdown" ng-show="userProfile">
         <a href="#" class="dropdown-toggle" data-toggle="dropdown" style="padding: 9px;"><img ng-src="{{userProfile.googlePublicProfilePhotoUrl|profilePicture:32}}"/> <b class="caret"></b></a>
         <ul class="dropdown-menu">
