--- a/src/static/index_new.html
+++ b/src/static/index_new.html
@@ -82,7 +82,7 @@
                 <span id="myGsignin"></span>
             </div>
         </li>
-        <li ng-show="userProfile"><a href="#" ng-click="getAttractionsByWantToGo()">My Wishlist</a></li>
+        <li ng-show="userProfile"><a href="#" ng-click="getAttractionsByWantToGo()">My wishlist</a></li>
         <li class="dropdown" ng-show="userProfile">
         <a href="#" class="dropdown-toggle" data-toggle="dropdown" style="padding: 9px;"><img ng-src="{{userProfile.googlePublicProfilePhotoUrl|profilePicture:32}}"/> <b class="caret"></b></a>
         <ul class="dropdown-menu">
