added goHome method

--- a/src/static/index_new.html
+++ b/src/static/index_new.html
@@ -56,7 +56,7 @@
       <span class="icon-bar"></span>
       <span class="icon-bar"></span>
     </button>
-    <a class="navbar-brand" href="/">Affordable Culture</a>
+    <a class="navbar-brand" href="/" ng-click="goHome()">Affordable Culture</a>
   </div>
 
   <!-- Collect the nav links, forms, and other content for toggling -->
