--- a/src/static/index_new.html
+++ b/src/static/index_new.html
@@ -203,6 +203,9 @@
                         to explore. Yet visiting museum, gallery or zoo can be too expensive for many people to afford.
                         We're on a mission to put the world's most memorable yet absolutely free cultural experiences
                         at your fingertips. Because culture should be open and free for everyone.
+
+                        <iframe style="margin-top: 29px;" width="560" height="315" src="//www.youtube.com/embed/Inm6eQTDk18?rel=0" frameborder="0" allowfullscreen></iframe>
+
 					</div>
 				</div>
 			</div>
@@ -220,7 +223,7 @@
 					<div class="subheading" style="margin-top:15px">
                         We are constantly adding new museums to our website.
                         Been somewhere cool that’s not yet on the list? Please <a href="#" data-toggle="modal" data-target="#myModal">let us know</a>. Thank you!
-					</div>
+                    </div>
 				</div>
 			</div>
 		</center>
