updated credentials moved central block added logging on revoke_token

--- a/src/static/index_new.html
+++ b/src/static/index_new.html
@@ -45,6 +45,8 @@
   </head>
 <body ng-controller="AffordableCultureCtrl" ng-cloak>
 
+<div style="height: 500px; display: block;">
+
     <div class="navbar-wrapper">
       <div class="container">
 <nav class="navbar navbar-inverse navbar-static-top" role="navigation">
@@ -190,9 +192,10 @@
       <a class="right carousel-control" href="#myCarousel" data-slide="next"><span class="glyphicon glyphicon-chevron-right"></span></a>
     </div><!-- /.carousel -->
 
+</div>
 
 
-    <div class="container" style="top: 525px;position: absolute;">
+    <div class="container">
 
         <div id="allAttractions" class="contentGroup" ng-show="allAttractions.length">
           <ul id="allAttractions">
