--- a/src/static/index_new.html
+++ b/src/static/index_new.html
@@ -45,6 +45,17 @@
   </head>
 <body ng-controller="AffordableCultureCtrl" ng-cloak>
 
+<!-- Google Tag Manager -->
+<noscript><iframe src="//www.googletagmanager.com/ns.html?id=GTM-WSN94L"
+height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+<script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+'//www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+})(window,document,'script','dataLayer','GTM-WSN94L');</script>
+<!-- End Google Tag Manager -->
+
+
 <section id="notification" class="alert alert-warning" ng-show="notification">{{notification}}</section>
 
  <div class="notification" post-data-notification="">
