--- a/src/static/index_admin.html
+++ b/src/static/index_admin.html
@@ -26,7 +26,6 @@
   <script src="//ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>
   <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.0.7/angular.min.js"></script>
   <script src="//ajax.googleapis.com/ajax/libs/jqueryui/1.9.2/jquery-ui.min.js"></script>
-  <script src="https://maps.googleapis.com/maps/api/js?v=3.exp&sensor=false&libraries=places&key=AIzaSyCGnHVgULUsmKxSovoizEzinSF1ypdExUk"></script>
 
   <script src="js/jquery.filedrop.js"></script>
   <script src="js/app.js"></script>
@@ -34,7 +33,6 @@
   <script src="js/controllers.js"></script>
   <script src="js/filters.js"></script>
   <script src="js/directives.js"></script>
-  <script src="js/maps.js"></script>
   <script type='text/javascript'>
   function startApp() {
     console.log('start');
@@ -43,10 +41,13 @@
   </script>
 
   </head>
-<body ng-controller="AffordableCultureCtrl" ng-cloak>
+<body ng-controller="AffordableCultureAdminCtrl" ng-cloak>
 
-hallo world
+admin
 
+<form role="form" action="/admin/init" method="post">
+  <button type="submit" class="btn btn-default">init</button>
+</form>
 
   <!-- FOOTER -->
   <!--footer class="bs-footer">
