changed title renamed search button caption

--- a/src/static/index_new.html
+++ b/src/static/index_new.html
@@ -9,7 +9,7 @@
   <meta charset="utf-8" />
   <meta name="fragment" content="!" />
 
-    <title>Affordable Culture | See more, pay less.</title>
+    <title>Affordable Culture | Discover free admission attractions anywhere in the world</title>
 	<!-- Custom styles for this template -->
     <!-- Bootstrap core CSS -->
     <link href="bootstrap/css/bootstrap.css" rel="stylesheet">
@@ -75,7 +75,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
       <div class="form-group">
         <input id="search" type="text" class="form-control" ng-model="keywords" placeholder="Type in country or city name" style="width: 357px;">
       </div>
-      <button type="submit" class="btn btn-default" id="countryButton" ng-click="search()">Search</button>
+      <button type="submit" class="btn btn-default" id="countryButton" ng-click="search()" title="Discover free admission attractions">Discover free attractions</button>
     </form>
 
 </li>
@@ -235,7 +235,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 			<div class="container_27 clearfix">
 				<div class="grid_21 prefix_3 suffix_3">
 					<div class="subheading" style="margin-top:15px">
-                        We are constantly adding new museums to our website.
+                        We are constantly adding new <b>free</b> museums to our website.
                         Been somewhere cool that’s not yet on the list? Please <a href="#" data-toggle="modal" data-target="#myModal">let us know</a>. Thank you!
                     </div>
 				</div>
@@ -287,7 +287,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 
 <p>Affordable Culture provides up-to-date free admission information for top museums, galleries, factory tours, zoos and gardens in major cities around the world (500 attractions in more than 190 cities in 28 countries and counting) available at your fingertips. Users can browse museums by city or country, view museum details and find the museum on Google Maps. Feel free to share your own museum experience right on the site by marking places you’ve been to or would like to visit in the future. Get the most of your vacation and use the power of knowledge to save money on your next holiday.</p>
 
-<p>We are constantly adding new free attractions to our website. Been somewhere cool that’s not yet on the list? Please let us know using the form below. Thank you!</p>
+<p>We are constantly adding new <b>free</b> attractions to our website. Been somewhere cool that’s not yet on the list? Please let us know using the form below. Thank you!</p>
 
 <iframe src="https://docs.google.com/forms/d/1WOhXnFdDja1NEcsHuBK2GM-6tD-vu_dGcqsoi_ahfdA/viewform?embedded=true" width="760" height="380" frameborder="0" marginheight="0" marginwidth="0">Loading...</iframe>
 
