added google track

--- a/src/static/index.html
+++ b/src/static/index.html
@@ -12,7 +12,8 @@
   <link rel="stylesheet" href="css/photohunt.css"/>
   <link rel="stylesheet" href="css/affordableculture.css"/>
   <link rel="stylesheet" href="css/gh-buttons.css"/>
-  <!-- IE Fix for HTML5 Tags -->
+  <meta name="google-site-verification" content="QgT5yCzv1V5n8j6Y3sb3AeKNxiRqRXE6_88B2ptJljg" />
+    <!-- IE Fix for HTML5 Tags -->
   <!--[if lt IE 9]>
     <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
   <![endif]-->
