show carousel location in searchbox on click

--- a/src/static/index_new.html
+++ b/src/static/index_new.html
@@ -126,17 +126,17 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
         <div class="col-md-4">
           <img class="img-circle" src="/img/san-francisco.jpg">
           <h2>San Francisco</h2>
-          <p><button class="btn btn-default btn-invert" ng-click="setLocationToSearch('z=10&ll=37.7749295,-122.41941550000001')">See more &raquo;</button></p>
+          <p><button class="btn btn-default btn-invert" ng-click="setLocationToSearch('z=10&ll=37.7749295,-122.41941550000001', 'San Francisco');">See more &raquo;</button></p>
         </div><!-- /.col-md-4 -->
         <div class="col-md-4">
           <img class="img-circle" src="/img/new-york.jpg">
           <h2>New York</h2>
-          <p><button class="btn btn-default btn-invert" ng-click="setLocationToSearch('z=13&ll=40.7143528,-74.0059731')">See more &raquo;</button></p>
+          <p><button class="btn btn-default btn-invert" ng-click="setLocationToSearch('z=13&ll=40.7143528,-74.0059731', 'New York')">See more &raquo;</button></p>
         </div><!-- /.col-md-4 -->
         <div class="col-md-4">
           <img class="img-circle" src="/img/los-angeles.jpg">
           <h2>Los Angeles</h2>
-          <p><button class="btn btn-default btn-invert" ng-click="setLocationToSearch('z=12&ll=34.0522342,-118.2436849')">See more &raquo;</button></p>
+          <p><button class="btn btn-default btn-invert" ng-click="setLocationToSearch('z=12&ll=34.0522342,-118.2436849', 'Los Angeles')">See more &raquo;</button></p>
         </div><!-- /.col-md-4 -->
       </div><!-- /.row -->
 	  </div>
@@ -149,17 +149,17 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
         <div class="col-md-4">
           <img class="img-circle" src="/img/london.jpg">
           <h2>London</h2>
-          <p><button class="btn btn-default btn-invert"  ng-click="setLocationToSearch('z=11&ll=51.51121389999999,-0.11982439999997041')">See more &raquo;</button></p>
+          <p><button class="btn btn-default btn-invert"  ng-click="setLocationToSearch('z=11&ll=51.51121389999999,-0.11982439999997041', 'London')">See more &raquo;</button></p>
         </div><!-- /.col-md-4 -->
         <div class="col-md-4">
           <img class="img-circle" src="/img/brussels.jpg">
           <h2>Brussels</h2>
-          <p><button class="btn btn-default btn-invert"  ng-click="setLocationToSearch('z=13&ll=50.8503396,4.351710300000036')">See more &raquo;</button></p>
+          <p><button class="btn btn-default btn-invert"  ng-click="setLocationToSearch('z=13&ll=50.8503396,4.351710300000036', 'Brussels')">See more &raquo;</button></p>
         </div><!-- /.col-md-4 -->
         <div class="col-md-4">
           <img class="img-circle" src="/img/paris.jpg">
           <h2>Paris</h2>
-          <p><button class="btn btn-default btn-invert"  ng-click="setLocationToSearch('z=15&ll=48.856614,2.3522219000000177')">See more &raquo;</button></p>
+          <p><button class="btn btn-default btn-invert"  ng-click="setLocationToSearch('z=15&ll=48.856614,2.3522219000000177', 'Paris')">See more &raquo;</button></p>
         </div><!-- /.col-md-4 -->
       </div><!-- /.row -->
           </div>
@@ -172,17 +172,17 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
         <div class="col-md-4">
           <img class="img-circle" src="/img/moscow.jpg">
           <h2>Moscow</h2>
-          <p><button class="btn btn-default btn-invert"  ng-click="setLocationToSearch('z=13&ll=55.755826,37.6173')">See more &raquo;</button></p>
+          <p><button class="btn btn-default btn-invert"  ng-click="setLocationToSearch('z=13&ll=55.755826,37.6173', 'Moscow')">See more &raquo;</button></p>
         </div><!-- /.col-md-4 -->
         <div class="col-md-4">
           <img class="img-circle" src="/img/tokyo.jpg">
           <h2>Tokyo</h2>
-          <p><button class="btn btn-default btn-invert"  ng-click="setLocationToSearch('z=11&ll=35.6894875,139.69170639999993')">See more &raquo;</button></p>
+          <p><button class="btn btn-default btn-invert"  ng-click="setLocationToSearch('z=11&ll=35.6894875,139.69170639999993', 'Tokyo')">See more &raquo;</button></p>
         </div><!-- /.col-md-4 -->
         <div class="col-md-4">
           <img class="img-circle" src="/img/lisbon.jpg">
           <h2>Lisbon</h2>
-          <p><button class="btn btn-default btn-invert"  ng-click="setLocationToSearch('z=12&ll=38.7252993,-9.150036399999976')">See more &raquo;</button></p>
+          <p><button class="btn btn-default btn-invert"  ng-click="setLocationToSearch('z=12&ll=38.7252993,-9.150036399999976', 'Lisbon')">See more &raquo;</button></p>
         </div><!-- /.col-md-4 -->
       </div><!-- /.row -->
           </div>
