updated client secret to work with www.affordableclture.org

--- a/src/static/index_admin.html
+++ b/src/static/index_admin.html
@@ -67,7 +67,7 @@ admin
   m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
   })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
 
-  ga('create', 'UA-45882358-1', 'gcdc2013-affordable-culture.appspot.com');
+  ga('create', 'UA-45882358-1', 'www.affordableculture.org');
   ga('send', 'pageview');
 
 </script>
