--- a/src/static/index_new.html
+++ b/src/static/index_new.html
@@ -333,7 +333,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
   m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
   })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
 
-  ga('create', 'UA-45882358-1', 'gcdc2013-affordable-culture.appspot.com');
+  ga('create', 'UA-45882358-1', 'www.affordableculture.org');
   ga('send', 'pageview');
 
 </script>
