fixed html title

--- a/src/static/index_new.html
+++ b/src/static/index_new.html
@@ -9,7 +9,7 @@
   <meta charset="utf-8" />
   <meta name="fragment" content="!" />
 
-    <title>Affordable Culture | Discover free admission attractions anywhere in the world</title>
+    <title>Affordable Culture | Discover free admission attractions around the world</title>
 	<!-- Custom styles for this template -->
     <!-- Bootstrap core CSS -->
     <link href="bootstrap/css/bootstrap.css" rel="stylesheet">
