--- a/src/static/index.html
+++ b/src/static/index.html
@@ -5,176 +5,266 @@
 <!--[if IE 7]>    <html class="no-js lt-ie9 lt-ie8" lang="en"> <![endif]-->
 <!--[if IE 8]>    <html class="no-js lt-ie9" lang="en"> <![endif]-->
 <!--[if gt IE 8]><!--> <html class="no-js" lang="en"> <!--<![endif]-->
-<head>
+  <head>
   <meta charset="utf-8" />
-  <title>Affordable Culture</title>
-  <link rel="stylesheet" href="//ajax.googleapis.com/ajax/libs/jqueryui/1.9.2/themes/base/jquery-ui.css"/>
-  <link rel="stylesheet" href="css/photohunt.css"/>
-  <link rel="stylesheet" href="css/affordableculture.css"/>
-  <link rel="stylesheet" href="css/gh-buttons.css"/>
-  <meta name="google-site-verification" content="QgT5yCzv1V5n8j6Y3sb3AeKNxiRqRXE6_88B2ptJljg" />
-    <!-- IE Fix for HTML5 Tags -->
+  <meta name="fragment" content="!" />
+
+    <title>Affordable Culture | Discover free admission attractions around the world</title>
+	<!-- Custom styles for this template -->
+    <!-- Bootstrap core CSS -->
+    <link href="/bootstrap/css/bootstrap.css" rel="stylesheet">
+	<link href="/css/style.css" rel="stylesheet">
+	<link href="/css/affordableCulture.css" rel="stylesheet">
+    <link href="/css/carousel.css" rel="stylesheet">
+    <link href='//fonts.googleapis.com/css?family=Roboto:400,100italic' rel='stylesheet' type='text/css'>
+
+  <!-- IE Fix for HTML5 Tags -->
   <!--[if lt IE 9]>
     <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
   <![endif]-->
-  <script src="https://maps.googleapis.com/maps/api/js?v=3.exp&sensor=false&libraries=places"></script>
-  <script src="//ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>
-  <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.0.3/angular.min.js"></script>
-  <script src="//ajax.googleapis.com/ajax/libs/jqueryui/1.9.2/jquery-ui.min.js"></script>
-  <script src="https://maps.googleapis.com/maps/api/js?v=3.exp&sensor=false&libraries=places"></script>
 
-  <script src="js/jquery.filedrop.js"></script>
-  <script src="js/app.js"></script>
-  <script src="js/services.js"></script>
-  <script src="js/controllers.js"></script>
-  <script src="js/filters.js"></script>
-  <script src="js/directives.js"></script>
   <script type='text/javascript'>
   function startApp() {
     console.log('start');
     angular.bootstrap(document, ['affordableCulture']);
   }
   </script>
-</head>
+
+  </head>
 <body ng-controller="AffordableCultureCtrl" ng-cloak>
-<div id="container">
 
-    <header>
-    <div id="topHeader">
+<!-- Google Tag Manager -->
+<noscript><iframe src="//www.googletagmanager.com/ns.html?id=GTM-WSN94L"
+height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+<script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+'//www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+})(window,document,'script','dataLayer','GTM-WSN94L');</script>
+<!-- End Google Tag Manager -->
 
-      <div id="search" >
-        <input type="text" ng-model="keywords" placeholder="desired location"/>
-        <button ng-click="search()">search</button>
-      </div>
 
-      <div id="profileInfo" >
-        <span id="signin" ng-show="immediateFailed">
-          <span id="myGsignin"></span>
-        </span>
-        <span ng-show="userProfile">
-	        <a target="_blank" href="{{userProfile.googlePublicProfileUrl}}">
-	          <span class="name">{{userProfile.googleDisplayName}}</span>
-	          <img ng-src="{{userProfile.googlePublicProfilePhotoUrl|profilePicture:32}}" />
-	        </a>
-	        <button class="button danger disconnect" ng-click="disconnect()" style="">
-	           Disconnect
-	         </button>
-         </span>
-      </div>
-    </div>
-    <div id="bottomHeader">
-      <h2>Category
-        <span id="todayTheme">{{selectedCategory.name}}</span>!
-      </h2>
-      <div>
-        <button id="invite" class="button icon add primary" ng-show="themes">
-          Invite your friends
-        </button>
-      </div>
-      <div class="sort button-group">
-        <button class="button icon clock" id="sortRecent"
-            ng-class="recentButtonClasses"
-            ng-click="orderBy('recent'); ">Recent</button>
-        <button class="button icon like" id="sortPopular"
-            ng-class="popularButtonClasses"
-            ng-click="orderBy('popular');">Popular</button>
-      </div>
-    </div>
-  </header>
-  
-  <section id="notification">{{notification}}</section>
+<section id="notification" class="alert alert-warning" ng-show="notification">{{notification}}</section>
 
-  <section id="photoList">
-   <ng-switch on="highlightedAttraction">
-      <span ng-switch-when="undefined"></span>
-      <div ng-switch-default id="selectedPhoto" class="contentGroup">
-        <h3>Highlighted Attraction</h3>
-        <ul>
-          <li>
-            <photo item="highlightedAttraction" delete-attraction="deletePhoto(photoId)">
-          </li>
-        </ul>
-      </div>
-    </ng-switch>
-    <div class="contentGroup" ng-show="isSignedIn">
-      <!-- <h3>My Photos</h3>
-      <div id="uploadContainer" ng-show="canUpload()">
-        <button upload-box
-            upload-url="uploadUrl"
-            on-complete="uploadedPhoto(photo)"
-            id="upload">
-        </button>
-      </div> -->
-      <ul id="myPhotos" ng-show="userPhotos.length">
-        <li ng-repeat="attraction in userPhotos|orderBy:ordering">
-          <attraction item="attraction" delete-photo="deletePhoto(photoId)"></attraction>
-        </li>
-      </ul>
-    </div>
-    <div id="friendsPhotos" class="contentGroup" ng-show="friendsAttractions.length">
-      <h3>Photos from Friends</h3>
-      <ul id="friendsPhotos">
-        <li ng-repeat="attraction in friendsAttractions|orderBy:ordering">
-          <attraction item="attraction" delete-photo="deletePhoto(friendsAttractionId)"></attraction>
-        </li>
-      </ul>
-    </div>
-
-    <!-- <div id="allPhotos" class="contentGroup" ng-show="allPhotos.length">
-      <h3>All Attractions</h3>
-      <ul id="allPhotos">
-        <li ng-repeat="photo in allPhotos|orderBy:ordering">
-          <photo item="photo" delete-photo="deletePhoto(photoId)"></photo>
-        </li>
-      </ul>
-    </div> -->
-
-    <div id="allAttractions" class="contentGroup" ng-show="allAttractions.length">
-      <h3>All Attractions</h3>
-      <ul id="allAttractions">
-        <li ng-repeat="attraction in allAttractions|orderBy:ordering">
-          <attraction item="attraction"></attraction>
-        </li>
-      </ul>
-    </div>
-  </section>
-
-  <nav ng-show="categories" id="boxThemes">
-    <div>
-    <h3>Categories</h3>
-      <ul id="recentThemes">
-        <li ng-repeat="(key, value) in categories|limitTo:10">
-          <span><a ng-click="selectCategory(key)">{{value.name}}</a></span>
-          <span class="date">{{value.created|date:'longDate'}}</span>
-        </li>
-      </ul>
-    </div>
-    <div ng-show="friends">
-      <h3>Friends using Free Attractions</h3>
-      <ul id="friendList">
-        <li ng-repeat="friend in friends | orderBy:'displayName'">
-          <a href="{{friend.googlePublicProfileUrl}}"><img ng-src="{{friend.googlePublicProfilePhotoUrl|profilePicture:50}}"
-              alt="{{friend.googleDisplayName}}" width="50" height="50"/>{{friend.googleDisplayName}}</a></li>
-     </ul>
-    </div>
-  </nav>
-
-  <footer>
-...
-  </footer>
+<div class="notification">
+            <p>{{notificationMessage}}</p>
 </div>
-  <script type="text/javascript">
-  window.___gcfg = {
-    parsetags: 'explicit'
-  };
-  (function() {
-    var po = document.createElement('script'); po.type = 'text/javascript'; po.async = true;
-    po.src = 'https://apis.google.com/js/auth:plusone.js?onload=startApp';
-    var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(po, s);
-  })();
-  $(function() {
-    $("#sort").buttonset();
-  });
-  </script>
+
+<div style="height: 500px; display: block;">
+
+    <div class="navbar-wrapper">
+      <div class="container">
+<nav class="navbar navbar-inverse navbar-static-top" role="navigation">
+  <!-- Brand and toggle get grouped for better mobile display -->
+  <div class="navbar-header">
+    <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
+      <span class="sr-only">Toggle navigation</span>
+      <span class="icon-bar"></span>
+      <span class="icon-bar"></span>
+      <span class="icon-bar"></span>
+    </button>
+    <a class="navbar-brand" href="/" ng-click="goHome()">Affordable Culture</a>
+  </div>
+
+  <!-- Collect the nav links, forms, and other content for toggling -->
+  <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+
+<ul class="nav navbar-nav navbar-left">
+<li>
+     <form class="navbar-form navbar-right" role="search">
+      <div class="form-group">
+        <input id="search" type="text" class="form-control" ng-model="keywords" placeholder="Type in country or city name" style="width: 357px;"/>
+      </div>
+      <button type="submit" class="btn btn-default" id="countryButton" ng-click="search()" title="Discover free admission attractions">Discover free attractions</button>
+    </form>
+
+</li>
+</ul>
+
+    <ul class="nav navbar-nav navbar-right">
+        <li><a href="#" data-toggle="modal" data-target="#myModal">About</a></li>
+
+        <li class="dropdown" ng-show="immediateFailed">
+            <div id="signin">
+                <span id="myGsignin"></span>
+            </div>
+        </li>
+        <li ng-show="userProfile"><a href="#" ng-click="getAttractionsByWantToGo()">My wishlist</a></li>
+        <li class="dropdown" ng-show="userProfile">
+        <a href="#" class="dropdown-toggle" data-toggle="dropdown" style="padding: 9px;"><img ng-src="{{userProfile.googlePublicProfilePhotoUrl|profilePicture:32}}"/> <b class="caret"></b></a>
+        <ul class="dropdown-menu">
+          <!--li><a href="#">Settings</a></li-->
+          <!--li class="divider"></li-->
+          <li><a href="#" ng-click="disconnect()">Disconnect</a></li>
+        </ul>
+      </li>
+    </ul>
+
+  </div><!-- /.navbar-collapse -->
+</nav>
+
+      </div>
+    </div>
+
+    <input id="searchByLocation" value="" ng-model="locationToSearch" ng-change="searchByLocation" type="text" style="display: none">
+    <div id="map-canvas" hello-maps="" latitude="43.074688" longitude="-89.384294" class="opacity"></div>
+
+    <div ng-hide="attractions" ng-include src="'partials/carousell.html'"></div>
+
+</div>
+
+
+    <div class="container">
+
+        <div class="contentGroup" ng-show="allAttractions.length">
+          <ul id="allAttractions">
+            <li ng-repeat="attraction in allAttractions|orderBy:ordering" id="rhs">
+              <attraction item="attraction"></attraction>
+            </li>
+          </ul>
+        </div>
+
+
+    <section id="section-2" class="container" ng-hide="allAttractions">
+		<center>
+			<h2 class="title" style="font-weight: bold;">Our mission: Making culture affordable</h2>
+			<div class="container_27 clearfix">
+				<div class="grid_21 prefix_3 suffix_3">
+					<div class="subheading" style="margin-top:15px">
+						There's a whole wide world out there, full of wonderful things to do and amazing places
+                        to explore. Yet visiting museum, gallery or zoo can be too expensive for many people to afford.
+                        We're on a mission to put the world's most memorable yet absolutely free cultural experiences
+                        at your fingertips. Because culture should be open and free for everyone.
+
+                        <iframe style="margin-top: 29px;" width="560" height="315" src="//www.youtube.com/embed/Inm6eQTDk18?rel=0" frameborder="0" allowfullscreen></iframe>
+
+					</div>
+				</div>
+			</div>
+		</center>
+	</section>
+
+
+    <section id="section-2">
+		<center>
+			<div class="container_27 clearfix">
+				<div class="grid_21 prefix_3 suffix_3">
+					<div class="subheading" style="margin-top:15px">
+                        We are constantly adding new <b>free</b> museums to our website.
+                        Been somewhere cool that’s not yet on the list? Please
+                        <a href="#" data-toggle="modal" data-target="#myModal">let us know</a>. Thank you!
+                    </div>
+				</div>
+			</div>
+		</center>
+	</section>
+
+
+
+    </div>
+
+
+<!-- Modal -->
+<div class="modal fade" id="myModalLogin" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <div class="modal-header">
+        <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+        <h4 class="modal-title" id="myModalLabel">Sign in with Google+</h4>
+      </div>
+      <div class="modal-body">
+        Affordable Culture is powered by Google+.
+          By signing in with your account, you’ll be able to use its social features such as
+          voting for the attractions you've visited or you'd like to visit in the future
+          (the latter places will be saved to your 'My wishlist' page).
+        <div id="signin">
+            <span id="myGsigninDialog"></span>
+        </div>
+      </div>
+    </div><!-- /.modal-content -->
+  </div><!-- /.modal-dialog -->
+</div><!-- /.modal -->
+
+
+
+<!-- Modal -->
+<div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <div class="modal-header">
+        <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+        <h4 class="modal-title" id="myModalLabel">About</h4>
+      </div>
+      <div class="modal-body">
+
+<p>Traveling or a day out near home? Would exploring museums, galleries and other attractions be something you'd like to do while on weekend, holiday or vacation? Have you found that it can be too expensive? Find out where you and your family can enjoy free admission to top attractions. Whether you want to see an original Picasso, check out the history of toys or find out about forensics, there are great places  to suit all tastes. Having fun doesn’t require a lot of money! See? ;)</p>
+
+<p>Affordable Culture provides up-to-date free admission information for top museums, galleries, factory tours, zoos and gardens in major cities around the world (500 attractions in more than 190 cities in 28 countries and counting) available at your fingertips. Users can browse museums by city or country, view museum details and find the museum on Google Maps. Feel free to share your own museum experience right on the site by marking places you’ve been to or would like to visit in the future. Get the most of your vacation and use the power of knowledge to save money on your next holiday.</p>
+
+<p>We are constantly adding new <b>free</b> attractions to our website. Been somewhere cool that’s not yet on the list? Please let us know using the form below. Thank you!</p>
+
+<iframe src="https://docs.google.com/forms/d/1WOhXnFdDja1NEcsHuBK2GM-6tD-vu_dGcqsoi_ahfdA/viewform?embedded=true" width="760" height="380" frameborder="0" marginheight="0" marginwidth="0">Loading...</iframe>
+
+<p>Please note that the information was accurate when it was published but can change without notice. We do our best to keep the information up to date but we can’t guarantee 100% accuracy. Please be sure to confirm all rates and details directly with the individual attractions in question prior to making travel or visit plans.</p>
+
+<p>P.S. While everybody loves things being free, we also appreciate what it takes to make them free. Often, small organizations rely on donations to keep the doors open and the admission free. If you happen to have some extra money and thought the place was worth it, don't hesitate to fill up that donation box.</p>
+
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+      </div>
+    </div><!-- /.modal-content -->
+  </div><!-- /.modal-dialog -->
+</div><!-- /.modal -->
+
+  <!-- FOOTER -->
+  <!--footer class="bs-footer">
+    <p>&copy; 2013 Affordable Culture &middot; <a href="#">Privacy</a> &middot; <a href="#">Terms</a></p>
+  </footer -->
+
+    <script src="https://code.jquery.com/jquery.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.12/angular.min.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.12/angular-route.min.js"></script>
+
+    <script src="https://maps.googleapis.com/maps/api/js?v=3.exp&sensor=false&libraries=places&key=AIzaSyCGnHVgULUsmKxSovoizEzinSF1ypdExUk"></script>
+
+    <script src="/js/jquery.filedrop.js"></script>
+    <script src="/js/app.js"></script>
+    <script src="/js/services.js"></script>
+    <script src="/js/controllers.js"></script>
+    <script src="/js/filters.js"></script>
+    <script src="/js/directives.js"></script>
+    <script src="/js/maps.js"></script>
+
+    <!-- Bootstrap core JavaScript
+    ================================================== -->
+    <!-- Placed at the end of the document so the pages load faster -->
+    <!-- script src="assets/js/jquery.js"></script -->
+    <script src="/bootstrap/js/bootstrap.min.js"></script>
+    <!--script src="assets/js/holder.js"></script-->
+
+    <script type="text/javascript">
+      (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+      (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+      m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+      })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+      ga('create', 'UA-45882358-1', 'www.affordableculture.org');
+      ga('send', 'pageview');
+
+    </script>
+
+
+    <script type="text/javascript">
+        window.___gcfg = {
+        parsetags: 'explicit'
+        };
+        (function() {
+        var po = document.createElement('script'); po.type = 'text/javascript'; po.async = true;
+        po.src = 'https://apis.google.com/js/auth:plusone.js?onload=startApp';
+        var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(po, s);
+        })();
+    </script>
+
 </body>
 </html>
